--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		gtag('config', 'UA-133937032-9');
 		</script>
 
-	<title>アナログもデジタルも怖くない！ - 電気回路入門</title>
+	<title>残業戦士はお寿司が食べたい</title>
 
 	<!-- Site Setting -->
 	<meta charset="UTF-8">
@@ -30,7 +30,7 @@
 	<link rel="icon" href="/imgs/logo.ico" >
 
 	<!-- Canonical Tag -->
-	<link rel="canonical" href="https://electric_circuit.github.io/" />
+	<link rel="canonical" href="https://overtime-worker.github.io/" />
 
 </head>
 
@@ -57,7 +57,7 @@
 					<!-- Site Logo -->
 					<div class="col-6 text-center mb-4">
 						<a href="/index.html">
-							<span class="logo">電気回路入門</span>
+							<span class="logo"残業戦士はお寿司が食べたい></span>
 						</a>
 					</div>
 
@@ -114,7 +114,7 @@
 			<div class="row justify-content-start">
 				<div class="col-12 col-sm-10 text-center text-sm-left">
 
-					<h1 class="logo anime">電気回路入門</h1>
+					<h1 class="logo anime">残業戦士はお寿司が食べたい</h1>
 
 					<p class="mt-4">
 						<a class="btn btn-warning ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
@@ -254,7 +254,7 @@
 
 					</ul>
     
-					<p class="h5 mt-5">© 2019 電気回路入門</p>
+					<p class="h5 mt-5">© 2020 残業戦士はお寿司が食べたい</p>
 
 				</div>
 			</div>
