--- a/404.html
+++ b/404.html
@@ -4,16 +4,16 @@
 <head>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133937032-5"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133937032-9"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
-		gtag('config', 'UA-133937032-5');
+		gtag('config', 'UA-133937032-9');
 		</script>
 
-	<title>お探しのページが見つかりませんでした - 電気回路入門</title>
+	<title>お探しのページが見つかりませんでした - 残業戦士はお寿司が食べたい</title>
 
 	<!-- Site Setting -->
 	<meta charset="UTF-8">
@@ -54,7 +54,7 @@
 					<!-- Site Logo -->
 					<div class="col-6 text-center mb-4">
 						<a href="/index.html">
-							<span class="logo">電気回路入門</span>
+							<span class="logo">残業戦士はお寿司が食べたい</span>
 						</a>
 					</div>
 
@@ -129,7 +129,7 @@
 			<div class="row justify-content-start">
 				<div class="col-12 col-sm-10 text-center text-sm-left">
 
-					<h1 class="logo anime">電気回路入門</h1>
+					<h1 class="logo anime">残業戦士はお寿司が食べたい</h1>
 
 					<p class="mt-4">
 						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
@@ -269,7 +269,7 @@
 
 					</ul>
     
-					<p class="h5 mt-5">© 2019 電気回路入門</p>
+					<p class="h5 mt-5">© 2020 残業戦士はお寿司が食べたい</p>
 
 				</div>
 			</div>
