--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<!-- Site Logo -->
 					<div class="col-6 text-center mb-4">
 						<a href="/index.html">
-							<span class="logo">残業戦士はお寿司が食べたい</span>
+							<span class="logo">残業戦士は<br>お寿司が食べたい</span>
 						</a>
 					</div>
 
