--- a/404.html
+++ b/404.html
@@ -224,6 +224,23 @@
 			<article class="m-3 row rounded">
 
 				<div class="col-4 p-2 w-100 h-100">
+					<a href="https://electric-circuit.github.io/">
+						<img class="img-thumbnail" src="/imgs/shapes/site5.svg" width="90" height="90">
+					</a>
+				</div>
+
+				<div class="col-8 p-2 w-100 h-100 text-left">
+					<a href="https://electric-circuit.github.io/">
+						<h4>「電気回路入門」様</h4>
+						<p><small>電気工学を幅広く学びたい方にお勧めです</small></p>
+					</a>
+				</div>
+
+			</article>
+
+			<article class="m-3 row rounded">
+
+				<div class="col-4 p-2 w-100 h-100">
 					<a href="https://nihon-farmura.github.io/">
 						<img class="img-thumbnail" src="/imgs/shapes/site6.svg" width="90" height="90">
 					</a>
@@ -233,6 +250,57 @@
 					<a href="https://nihon-farmura.github.io/">
 						<h4>「日本ファー村」様</h4>
 						<p><small>農業を趣味にしたい方は必見のお得情報が満載です</small></p>
+					</a>
+				</div>
+
+			</article>
+
+			<article class="m-3 row rounded">
+
+				<div class="col-4 p-2 w-100 h-100">
+					<a href="https://car-legends.github.io/">
+						<img class="img-thumbnail" src="/imgs/shapes/site7.svg" width="90" height="90">
+					</a>
+				</div>
+
+				<div class="col-8 p-2 w-100 h-100 text-left">
+					<a href="https://car-legends.github.io/">
+						<h4>「CarLegends」様</h4>
+						<p><small>世界の名車・珍車について徹底的に解説されています</small></p>
+					</a>
+				</div>
+
+			</article>
+
+			<article class="m-3 row rounded">
+
+				<div class="col-4 p-2 w-100 h-100">
+					<a href="https://yuru-chara.github.io/">
+						<img class="img-thumbnail" src="/imgs/shapes/site8.svg" width="90" height="90">
+					</a>
+				</div>
+
+				<div class="col-8 p-2 w-100 h-100 text-left">
+					<a href="https://yuru-chara.github.io/">
+						<h4>「ゆる～くゆるキャラ」様</h4>
+						<p><small>ゆる～いキャラクター達の情報が満載です</small></p>
+					</a>
+				</div>
+
+			</article>
+
+			<article class="m-3 row rounded">
+
+				<div class="col-4 p-2 w-100 h-100">
+					<a href="https://chocolate-teatime.github.io/">
+						<img class="img-thumbnail" src="/imgs/shapes/site10.svg" width="90" height="90">
+					</a>
+				</div>
+
+				<div class="col-8 p-2 w-100 h-100 text-left">
+					<a href="https://chocolate-teatime.github.io/">
+						<h4>「チョコっとTeatime」様</h4>
+						<p><small>何気ない日常の一コマを日記調に切り取っています</small></p>
 					</a>
 				</div>
 
