--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<h1 class="logo anime">残業戦士はお寿司が食べたい</h1>
 
 					<p class="mt-4">
-						<a class="btn btn-warning ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
+						<a class="btn btn-default ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
 						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/about.html">サイト概要</a>
 						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/contact.html">お問い合わせ</a>
 						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/privacy_policy.html">個人情報保護方針</a>
