--- a/404.html
+++ b/404.html
@@ -337,7 +337,7 @@
 
 					</ul>
     
-					<p class="h5 mt-5">© 2020 残業戦士はお寿司が食べたい</p>
+					<p class="black h5 mt-5">© 2020 残業戦士はお寿司が食べたい</p>
 
 				</div>
 			</div>
